<resources>
    <string name="app_name">快乐就完事了</string>
    <string name="action_settings">exit</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">chat</string>
    <string name="register">register</string>
    <string name="token">token</string>
    <!--   注册用 -->
    <string name="registration">registration</string>
    <string name="registration_nickname">请输入昵称</string>
    <string name="registration_username">username</string>
    <string name="registration_password">password</string>
    <string name="registration_ensure">请确认密码</string>
    <string name="finish">完成注册</string>
    <!--登录用-->
    <string name="please_account">username</string>
    <string name="please_password">password</string>
    <string name="enter">enter</string>
    <!--忘记密码-->
    <string name="forget">forget</string>
    <string name="forget_username">请输入账户名</string>
    <string name="search_password">点击查看密码</string>
    <!--聊天-->
    <string name="chatRoom">chatRoom</string>
    <string name="send">发送</string>
</resources>
