<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
            android:id="@+id/register_text"
            android:text="@string/registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.1">
    </TextView>

    <EditText
            android:id="@+id/registration_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.2"
            android:background="@drawable/back"
            android:hint="@string/registration_nickname">

    </EditText>
    <EditText
            android:id="@+id/registration_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:hint="@string/registration_username"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintVertical_bias="0.3">

    </EditText>
    <com.example.chatroom.Utils.PasswordToggleEditText
            android:id="@+id/registration_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/registration_password"
            android:background="@drawable/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.4">
    </com.example.chatroom.Utils.PasswordToggleEditText>
    <com.example.chatroom.Utils.PasswordToggleEditText
            android:id="@+id/registration_ensure"
            android:layout_width="match_parent"
            android:hint="@string/registration_ensure"
            android:background="@drawable/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.5"
            android:layout_height="wrap_content">
    </com.example.chatroom.Utils.PasswordToggleEditText>

    <Button
            android:id="@+id/register_finish"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.7"
            android:text="@string/finish"
            android:textColor="@android:color/background_light"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    </Button>
</androidx.constraintlayout.widget.ConstraintLayout>